// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionExplorerLink should render a 'block' link 1`] = `
<div>
  <div
    class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 cHOkoL no-ligatures"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2 w-40 whitespace-nowrap"
    >
      <div
        class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
      >
        Block ID
      </div>
      <div
        class="font-semibold"
      >
        <div
          class="flex overflow-hidden items-center space-x-3"
        >
          <span
            class="overflow-hidden"
          >
            <a
              class="Link__AnchorStyled-sc-1q7sbxr-0 jXgXXh group"
              data-testid="Link"
              href="#"
              rel="noopener noreferrer"
              to="block-link}"
            >
              <span
                class="break-all border-b border-transparent duration-200 group-hover:border-current"
              >
                <span
                  class="inline-flex overflow-hidden"
                >
                  test-id
                </span>
              </span>
              <span
                class="align-middle"
              >
                <div
                  class="inline-block flex-shrink-0 pb-px text-sm duration-200 sc-bdfBwQ fPrsah"
                  data-testid="Link__external"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    redirect.svg
                  </svg>
                </div>
              </span>
            </a>
          </span>
          <span
            class="flex text-theme-primary-300 dark:text-theme-secondary-600"
          >
            <button
              class="relative focus:outline-none group"
              data-testid="clipboard-icon__wrapper"
              type="button"
            >
              <div
                class="absolute inset-0 -m-1 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
              />
              <div
                class="sc-bdfBwQ fPrsah"
                height="1em"
                width="1em"
              >
                <svg>
                  copy.svg
                </svg>
              </div>
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionExplorerLink should render a 'transaction' link 1`] = `
<div>
  <div
    class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 cHOkoL no-ligatures"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2 w-40 whitespace-nowrap"
    >
      <div
        class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
      >
        ID
      </div>
      <div
        class="font-semibold"
      >
        <div
          class="flex overflow-hidden items-center space-x-3"
        >
          <span
            class="overflow-hidden"
          >
            <a
              class="Link__AnchorStyled-sc-1q7sbxr-0 jXgXXh group"
              data-testid="Link"
              href="#"
              rel="noopener noreferrer"
              to="transaction-link}"
            >
              <span
                class="break-all border-b border-transparent duration-200 group-hover:border-current"
              >
                <span
                  class="inline-flex overflow-hidden"
                >
                  test-id
                </span>
              </span>
              <span
                class="align-middle"
              >
                <div
                  class="inline-block flex-shrink-0 pb-px text-sm duration-200 sc-bdfBwQ fPrsah"
                  data-testid="Link__external"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    redirect.svg
                  </svg>
                </div>
              </span>
            </a>
          </span>
          <span
            class="flex text-theme-primary-300 dark:text-theme-secondary-600"
          >
            <button
              class="relative focus:outline-none group"
              data-testid="clipboard-icon__wrapper"
              type="button"
            >
              <div
                class="absolute inset-0 -m-1 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
              />
              <div
                class="sc-bdfBwQ fPrsah"
                height="1em"
                width="1em"
              >
                <svg>
                  copy.svg
                </svg>
              </div>
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
